refactor: 주문 대표상품명 업데이트 로직 수정